# lin-py

./: pyproject.toml
.github/workflows/: ci.yaml  flask.yaml
lin_py/: __init__.py  date_detection.py  image_processing.py  text_extraction.py
